--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,3 +14,24 @@ body{
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.search{
+  color: black;
+  padding: 0.5rem 1rem;
+  border: double 3px transparent;
+  border-radius: 20px;
+  background-image: linear-gradient(white, white), 
+                    linear-gradient(to right, #FF481C 0%, #DEF30E 100%);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+}
+
+.search:focus{
+  outline: none;
+  border: double 3px transparent;
+  background-image: linear-gradient(white, white), 
+                    linear-gradient(to right,  #DEF30E 0%,#FF481C 100%);
+  transition: ease-in-out;
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+}
