--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,12 +8,15 @@ body{
   background-color:black ;
 }
 
+/* logo styling */
 .brand{
   background: #FF481C;
   background: linear-gradient(to right, #FF481C 0%, #DEF30E 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+/* Searh bar styling */
 
 .search{
   color: black;
@@ -35,4 +38,24 @@ body{
   background-origin: border-box;
   background-clip: padding-box, border-box;
 }
+
+/*Custom scrollbar */
+.custom-scrollbar {
+  scrollbar-width: thin; /* For Firefox */
+  scrollbar-color: #DEF30E rgba(255, 165, 0, 0.1);
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 2px; /* For Chrome, Safari, and Opera */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #DEF30E;
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: rgba(255, 165, 0, 0.1);
+}
+
 
