UI fixes for navigation

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,12 @@
 
 
 body{
-
   background-color:black ;
+}
+
+/* Smooth scroll effect */
+html {
+  scroll-behavior: smooth;
 }
 
 /* logo styling */
